--- a/admin/app/views/spree/admin/orders/_header.html.erb
+++ b/admin/app/views/spree/admin/orders/_header.html.erb
@@ -7,9 +7,12 @@
   <%= @order.number %>
   <%= order_payment_state(@order, class: "ml-3") %>
   <%= order_shipment_state(@order, class: "ml-3") %>
-  <%= if @order.completed?
-    local_time(@order.completed_at, class: "badge badge-light with-tip ml-3")
-  end %>
+  <% if @order.completed? %>
+    <span class="text-muted font-size-sm font-weight-normal with-tip ml-3">
+      <%= I18n.t('activerecord.attributes.spree/order.completed_at') %>
+      <%= local_time(@order.completed_at) %>
+    </span>
+  <% end %>
 <% end %>
 
 <%# TODO: Fix mobile %>
