--- a/admin/app/views/spree/admin/orders/_refunds.html.erb
+++ b/admin/app/views/spree/admin/orders/_refunds.html.erb
@@ -25,9 +25,9 @@
                 <td class="amount"><%= refund.display_amount %></td>
                 <td>
                   <% if refund.transaction_id.present? %>
-                    <span class="badge badge-success"><%= icon('check') %><%= Spree.t(:completed) %></span>
+                    <span class="badge badge-success"><%= icon('check') %><%= Spree.t('state_machine_states.completed') %></span>
                   <% else %>
-                    <span class="badge badge-warning"><%= icon('clock') %><%= Spree.t(:pending) %></span>
+                    <span class="badge badge-warning"><%= icon('clock') %><%= Spree.t('state_machine_states.pending') %></span>
                   <% end %>
                 </td>
                 <td><%= truncate(refund.reason.name, length: 100) %></td>
