Admin: Improved Order View (#12561)
* Admin: Improved Order View

* UI fixes

* re-organise scss

* fixes list groups css

* Improve user edit screen & returns

* Translations fixes

* Admin: Improve refunds/payments management

* Fixed translations

--- a/admin/app/views/spree/admin/orders/_shipment.html.erb
+++ b/admin/app/views/spree/admin/orders/_shipment.html.erb
@@ -1,20 +1,24 @@
 <% order ||= shipment.order %>
-<%= turbo_frame_tag dom_id(shipment), class: "card mb-4" do %>
-  <div class="card-header stock-location justify-content-between flex-wrap pb-3" data-hook="stock-location" id="shipment">
-    <span class="shipment-number d-none"><%= shipment.number %></span>
-    <span class="d-flex align-items-center"><%= shipment_state(shipment.state, class: 'mr-3') %></span>
-    <% if shipment.shipped_at.present? %>
-      <small class="text-muted text-xs mr-2">
-        <%= Spree.t(:fulfilled_at).downcase %>
-        <%= local_time_ago(shipment.shipped_at, class: 'with-tip') %>
-      </small>
-    <% end %>
+<%= turbo_frame_tag dom_id(shipment), class: "card" do %>
+  <div class="card-header align-items-center justify-content-between">
+    <div class="d-flex align-items-center gap-2">
+      <span class="d-flex align-items-center"><%= shipment_state(shipment.state) %></span>
+      <strong class="shipment-number"><%= shipment.number %></strong>
+      <% if shipment.shipped_at.present? %>
+        <small class="text-muted">
+          <%= local_time_ago(shipment.shipped_at, class: 'with-tip') %>
+        </small>
+      <% end %>
+    </div>
 
     <span class="d-flex justify-content-between align-items-center gap-2">
-      <strong><%= shipment.number %></strong>
-      <small class="text-muted"><%= Spree.t(:fulfilled_from).downcase %></small>
-      <strong class="stock-location-name" data-hook="stock-location-name">
-        <%= shipment.stock_location.name %>
+      <small class="text-muted"><%= Spree.t(:package_from).downcase %></small>
+      <strong>
+        <% if can?(:edit, shipment.stock_location) %>
+          <%= link_to shipment.stock_location.name, spree.edit_admin_stock_location_path(shipment.stock_location), data: { turbo_frame: '_top' } %>
+        <% else %>
+          <%= shipment.stock_location.name %>
+        <% end %>
       </strong>
     </span>
   </div>
@@ -38,7 +42,7 @@
       </div>
       <%= render collection: shipment.manifest, partial: 'spree/admin/orders/shipment_manifest_item', as: :item, locals: { shipment: shipment } %>
     </div>
-    <%= turbo_frame_tag dom_id(shipment, :shipping_method), class: "hover-light py-2 px-3 d-flex justify-content-between align-items-center min-h-14" do %>
+    <%= turbo_frame_tag dom_id(shipment, :shipping_method), class: "py-2 px-3 d-flex justify-content-between align-items-center min-h-14" do %>
       <div>
         <% if rate = shipment.selected_shipping_rate %>
           <strong><%= rate.name %></strong>
@@ -56,33 +60,37 @@
     <% end %>
 
     <% unless shipment.digital? %>
-      <%= turbo_frame_tag dom_id(shipment, :tracking), class: "hover-light border-top px-3 d-flex justify-content-between align-items-center min-h-14" do %>
+      <%= turbo_frame_tag dom_id(shipment, :tracking), class: "border-top px-3 d-flex justify-content-between align-items-center min-h-14" do %>
         <div class="py-3">
+          <strong><%= Spree.t(:tracking) %>: </strong>
           <% if shipment.tracked? %>
-            <strong><%= Spree.t(:tracking) %>: </strong>
             <% if shipment.tracking_url.present? %>
               <span><%= link_to shipment.tracking, shipment.tracking_url, target: '_blank', rel: "noopener noreferrer" %></span>
             <% elsif shipment.tracking.present? %>
               <span><%= shipment.tracking %></span>
             <% end %>
           <% else %>
-            <%= Spree.t('admin.add_tracking_details') %>
+            <span class="text-muted"><%= Spree.t(:no_tracking_present) %></span>
           <% end %>
         </div>
 
         <% if can?(:update, shipment) && (!order.canceled? && !shipment.canceled?) %>
-          <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_order_shipment_path(order, shipment), class: 'edit-tracking btn btn-light btn-sm with-tip', no_text: true, title: Spree.t(:edit) %>
+          <% if shipment.tracking.present? %>
+            <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_order_shipment_path(order, shipment), class: 'btn btn-light btn-sm with-tip', no_text: true, title: Spree.t(:edit) %>
+          <% else %>
+            <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.edit_admin_order_shipment_path(order, shipment), class: 'btn btn-light btn-sm with-tip', no_text: true, title: Spree.t(:add_one) %>
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
 
     <% if can_ship?(shipment) %>
-      <div class="card-footer d-flex justify-content-end">
+      <div class="card-footer d-flex justify-content-end border-top bg-gray-25">
         <% if shipment.tracked? %>
           <%= link_to_with_icon 'send.svg', Spree.t(:ship), spree.ship_admin_order_shipment_path(order, shipment), class: 'ml-auto btn btn-primary mb-0', data: {turbo_method: :post, turbo_confirm: Spree.t(:are_you_sure)} %>
         <% elsif !shipment.digital? %>
           <span class="ship-tooltip with-tip ship ml-auto btn btn-primary disabled mb-0" data-toggle="tooltip" data-placement="left" title="Before marking shipment as shipped please provide tracking details">
-            <%= icon 'send.svg'%>
+            <%= icon 'send' %>
             <%= Spree.t(:ship) %>
           </span>
         <% else %>
