--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -46,7 +46,7 @@ $theme-colors: (
 );
 
 $body-color: #303030 !default;
-$body-bg: #FAFAF9 !default;
+$body-bg: #FCFCFC !default;
 $enable-shadows: false;
 $enable-responsive-font-sizes: true;
 $font-family-sans-serif: Inter, sans-serif !default;
@@ -114,8 +114,8 @@ $transition-collapse-width:   width .15s ease !default;
 
 $badge-font-size:                   0.70rem !default;
 $badge-font-weight:                 500 !default;
-$badge-padding-y:                   .35em !default;
-$badge-padding-x:                   .5em !default;
+$badge-padding-y:                   .25em !default;
+$badge-padding-x:                   .45em !default;
 $badge-border-radius:               $border-radius-sm !default;
 
 $transition-collapse:         height .15s ease !default;
@@ -143,7 +143,7 @@ $display4-weight:             400 !default;
 $dropdown-border-width:  0px !default;
 $dropdown-border-radius: $border-radius-lg !default;
 $dropdown-link-hover-bg: $gray-50 !default;
-$dropdown-box-shadow:    rgba(209, 217, 224, 0.5) 0px 0px 0px 1px, rgba(37, 41, 46, 0.04) 0px 6px 12px -3px, rgba(37, 41, 46, 0.12) 0px 6px 18px 0px !default;
+$dropdown-box-shadow:    rgba(209, 217, 224, 0.8) 0px 0px 0px 1px, rgba(37, 41, 46, 0.04) 0px 6px 12px -3px, rgba(37, 41, 46, 0.12) 0px 6px 18px 0px !default;
 $dropdown-padding-x:    0.25rem !default;
 $dropdown-padding-y:    0.25rem !default;
 
@@ -172,3 +172,6 @@ $embed-responsive-aspect-ratios: (
 $table-cell-padding: .75rem .50rem !default;
 
 $code-color: $gray-600 !default;
+
+$list-group-bg: transparent !default;
+$list-group-item-padding-x:         1rem !default;
