--- a/admin/app/views/spree/admin/shared/sidebar/_vendors_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_vendors_nav.html.erb
@@ -3,6 +3,6 @@
     <%= icon 'heart-handshake' %>
     <%= Spree.t(:vendors) %>
 
-    <span class="badge badge-dark ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
+    <span class="badge ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
   <% end %>
 </li>
