--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -1,6 +1,25 @@
 .dropdown .btn .text-muted {
   color: $gray-500 !important;
 }
+
+.dropdown {
+  .arrow {
+    color: $gray-300;
+  }
+
+  &:hover {
+    .arrow {
+      color: $gray-500;
+    }
+  }
+}
+
+.dropdown.show {
+  .arrow {
+    transform: rotate(3.142rad);
+  }
+}
+
 .dropdown-menu {
   overflow: hidden !important;
 
