--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -2,6 +2,7 @@
 
 $gray-25: #F9F9F9;
 $gray-50: #F3F3F3;
+$gray-75: #F0F0F0;
 $gray-100: #EAEAEA !default;
 $gray-150: #E0E0E0 !default;
 $gray-200: #D5D5D5 !default;
