--- a/admin/app/views/spree/admin/shared/sidebar/_enterprise_edition_notice.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_enterprise_edition_notice.html.erb
@@ -1,8 +1,7 @@
 <% if can?(:manage, current_store) && !enterprise_edition? %>
   <% unless session[:spree_enterprise_edition_notice_dismissed] %>
-    <div class="alert alert-info border-left-0 border-right-0 rounded-0 w-100 z-10 font-size-sm mb-0" style="background-image: none; padding-left: 1rem;">
-      <button class="btn-close position-absolute" style="right: 0.5rem; top: 0.5rem;">
-      </button>
+    <div id="enterprise-edition-notice">
+      <%= link_to '', spree.admin_dismiss_enterprise_edition_notice_path, method: :patch, class: 'btn-close' %>
       <p class="mb-1">You're using Spree Community Edition. To get access to all features, please upgrade to Enterprise Edition.</p>
 
       <%= external_link_to 'Upgrade', 'https://spreecommerce.org/pricing', target: '_blank', class: 'btn btn-link btn-sm shadow-xs' %>
