Redesigned Admin Dashboard sidebar for quicker access and better UX (#12568)
* Redesigned Admin Dashboard sidebar for quicker access and better UX

* improve on enterprise edition prompt

* Update _sidebar.html.erb

* Update _store_dropdown.html.erb

* Update _updater.html.erb

--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -1,14 +1,30 @@
 .dropdown .btn .text-muted {
   color: $gray-500 !important;
 }
+
+.dropdown {
+  .arrow {
+    color: $gray-300;
+  }
+
+  &:hover {
+    .arrow {
+      color: $gray-500;
+    }
+  }
+}
+
+.dropdown.show {
+  .arrow {
+    transform: rotate(3.142rad);
+  }
+}
+
 .dropdown-menu {
   overflow: hidden !important;
 
   box-shadow: $dropdown-box-shadow;
 
-  animation: fadeIn;
-  animation-duration: 0.5s;
-  
   font-weight: 500;
 
   .dropdown-item, .dropdown-header {
