--- a/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
@@ -1,44 +1,58 @@
-<div class="position-relative dropdown dropdown-dark my-lg-2 rounded" id="store-menu" data-turbo-permanent>
-  <button type="button"
-          class="btn border-dark rounded border-0 text-white d-flex align-items-center justify-content-between text-left w-100 shadow-none p-2 font-size-plus"
-          data-toggle="dropdown" aria-expanded="false">
-    <span class="d-flex align-items-center font-weight-bold">
-      <%= store_admin_icon(current_store) %>
+<div class="border-bottom border-bottom-dashed pb-2 d-flex align-items-center justify-content-between pr-1" id="store-menu" data-turbo-permanent>
+  <div class="dropdown">
+    <button type="button" class="btn d-flex align-items-center justify-content-between text-left dropdown-toggle d-flex align-items-center gap-2"
+            data-toggle="dropdown" aria-expanded="false">
+      <%= store_admin_icon(current_store, height: 32, width: 32) %>
       <span class="d-none d-lg-block">
-        <span>
-          <%= truncate(current_store.name, length: 15) %>
-        </span>
-        <br />
+        <%= truncate(current_store.name, length: 15) %>
       </span>
-    </span>
-    <%= icon 'selector', class: 'mr-0 ml-2 mb-0 text-muted' %>
-  </button>
-  <div class="dropdown-menu w-100 font-size-plus" style="min-width: 200px">
-    <%= link_to current_store.formatted_url_or_custom_domain, class: 'dropdown-item', target: '_blank' do %>
-      <%= icon 'eye' %>
-      <%= Spree.t(:view_store) %>
-    <% end %>
-    <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'dropdown-item' do %>
-      <%= icon 'tools' %>
-      <%= Spree.t('admin.edit_theme') %>
-    <% end if current_store.default_theme %>
+    </button>
+    <div class="dropdown-menu">
+      <%= link_to current_store.formatted_url_or_custom_domain, class: 'dropdown-item', target: '_blank' do %>
+        <%= icon 'eye' %>
+        <%= Spree.t(:view_store) %>
+      <% end %>
+      <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'dropdown-item' do %>
+        <%= icon 'tools' %>
+        <%= Spree.t('admin.edit_theme') %>
+      <% end if current_store.default_theme %>
 
-    <div class="dropdown-divider"></div>
+      <% if available_stores.count > 1 %>
+        <div class="dropdown-header">
+          <%= Spree.t(:switch_store) %>
+        </div>
+        <% available_stores.each do |store| %>
+          <% next if store.id == current_store.id %>
+          <%= link_to store.name, spree.admin_dashboard_url(host: store.url), class: 'dropdown-item' %>
+        <% end %>
 
-    <% if available_stores.count > 1 %>
-      <div class="dropdown-header">
-        <%= Spree.t(:switch_store) %>
-      </div>
-      <% available_stores.each do |store| %>
-        <% next if store.id == current_store.id %>
-        <%= link_to store.name, spree.admin_dashboard_url(host: store.url), class: 'dropdown-item' %>
+        <div class="dropdown-divider"></div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button type="button" class="btn btn-sm btn-light shadow-xs" data-toggle="dropdown" aria-expanded="false">
+      <%= icon 'plus', class: 'mr-0' %>
+    </button>
+    <div class="dropdown-menu">
+      <%= link_to_with_icon 'shopping-cart', Spree.t(:new_order), spree.admin_orders_path, class: "dropdown-item", data: { turbo_method: :post } if can?(:create, Spree::Order)  %>
+
+      <%= link_to spree.new_admin_product_path, class: 'dropdown-item' do %>
+        <%= icon 'box' %>
+        <%= Spree.t(:new_product) %>
+      <% end %>
+      <%= link_to spree.new_admin_user_path, class: 'dropdown-item' do %>
+        <%= icon 'user' %>
+        <%= Spree.t(:new_user) %>
       <% end %>
 
       <div class="dropdown-divider"></div>
-    <% end %>
 
-    <span data-toggle="modal" data-target="#modal-lg">
-      <%= link_to_with_icon 'plus', Spree.t(:new_store), spree.new_admin_store_path, class: 'dropdown-item', data: { turbo_frame: 'dialog_modal_lg' } %>
-    </so>
+      <span data-toggle="modal" data-target="#modal-lg">
+        <%= link_to_with_icon 'building-store', Spree.t(:new_store), spree.new_admin_store_path, class: 'dropdown-item', data: { turbo_frame: 'dialog_modal_lg' } %>
+      </span>
+    </div>
   </div>
 </div>
+
