--- a/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
@@ -1,12 +1,6 @@
-<% settings_active = %w[stores zones shipping_methods oauth_applications
-                        payment_methods refund_reasons reimbursement_types
-                        shipping_categories store_credit_categories
-                        syncs tax_categories tax_rates webhooks accounts
-                        custom_domains audits exports imports return_authorization_reasons
-                        documents stripe_tax_registrations members subscriptions stock_locations webhooks_subscribers].include?(controller_name) %>
-<% if settings_active %>
+<% if settings_active? %>
   <ul class="nav flex-column">
-    <li class="nav-item mb-3">
+    <li class="nav-item mb-1 py-2 border-bottom border-bottom-dashed">
       <%= active_link_to_with_icon('chevron-left', Spree.t('admin.back_to_dashboard'), spree.admin_dashboard_path, class: 'nav-link') %>
     </li>
 
