Simplify theme screenshot, rely on a 3rd party
If not, render default spree demo preview

--- a/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
+++ b/admin/app/assets/stylesheets/spree/admin/shared/_base.scss
@@ -648,7 +648,7 @@ turbo-frame[busy] #turbo-spinner {
 }
 
 .overlay-background {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba($white, 0.3);
   transition: background-color 0.3s ease-in-out;
 }
 
