--- a/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_store_preview.html.erb
@@ -1,31 +1,22 @@
 <% if current_store.default_theme %>
-  <div class="card mb-4">
-    <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'd-block card-img-top border-bottom overflow-auto bg-light position-relative store-preview-link', style: "height: 220px" do %>
+  <div class="card mb-4 bg-transparent">
+    <%= link_to spree.edit_admin_theme_path(current_store.default_theme), class: 'd-block border rounded mx-2 mt-2 mb-0 overflow-auto bg-light position-relative store-preview-link' do %>
       <div class="position-absolute w-100 h-100 align-items-center justify-content-center overlay-background store-preview-actions">
-        <button class="btn btn-outline-primary">
+        <button class="btn btn-primary">
           <%= icon('tools') %>
           <%= Spree.t('admin.edit_theme') %>
         </button>
       </div>
-      <% if current_store.default_theme.screenshot.attached? && current_store.default_theme.screenshot.variable? %>
-        <%= image_tag(
-              main_app.cdn_image_url(
-                current_store.default_theme.screenshot.variant(
-                  spree_image_variant_options(resize_to_fill: [400, 250])
-                )
-              ),
-              class: 'w-100 h-100 bg-light',
-              loading: :lazy,
-              style: 'height: 220px'
-            ) %>
-      <% else %>
-        <div class="w-100 h-100 d-flex flex-column align-items-center justify-content-center bg-light text-muted">
-          <%= icon('camera-off', class: 'text-muted', height: 24) %>
-        </div>
-      <% end %>
+
+      <%= image_tag(
+        current_store.default_theme.screenshot_url,
+        class: 'w-100 bg-light rounded',
+        loading: :lazy,
+        height: 172
+      ) %>
     <% end %>
 
-    <div class="card-body pt-2">
+    <div class="card-body px-2 pt-0 pb-2">
       <div class="flex my-2 p-1 w-100 rounded border" data-controller="clipboard" data-clipboard-success-content-value="Copied!">
         <% if current_store.default_custom_domain&.active? %>
           <%= text_field_tag :custom_domain, current_store.default_custom_domain.url, readonly: true, class: 'form-control-plaintext py-0', data: { clipboard_target: 'source' } %>
@@ -51,7 +42,7 @@
       </div>
     </div>
     <% unless current_store.default_custom_domain&.active? %>
-      <div class="card-footer border-top">
+      <div class="card-footer border-top p-2">
         <%= link_to_with_icon 'world-www', 'Connect your own domain', spree.admin_custom_domains_path, class: 'btn btn-link w-100 py-2' %>
       </div>
     <% end %>
