--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -30,13 +30,13 @@
             <td><%= price_form.object.currency %></td>
             <td>
               <div class="form-control align-items-center py-0 focus-shadow-primary focus-border-primary mr-2 price-input-container d-flex">
-                <%= price_form.text_field :amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object) %>
+                <%= price_form.text_field :amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object), value: number_to_currency(price_form.object.amount, unit: '').strip %>
                 <span><%= currency_symbol(price_form.object.currency) %></span>
               </div>
             </td>
             <td>
               <div class="form-control align-items-center py-0 focus-shadow-primary focus-border-primary mr-2 price-input-container d-flex">
-                <%= price_form.text_field :compare_at_amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object) %>
+                <%= price_form.text_field :compare_at_amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object), value: number_to_currency(price_form.object.compare_at_amount, unit: '').strip %>
                 <span><%= currency_symbol(price_form.object.currency) %></span>
               </div>
             </td>
@@ -46,3 +46,4 @@
     </table>
   </div>
 </div>
+
