--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -30,7 +30,7 @@
             <td><%= price_form.object.currency %></td>
             <td>
               <div class="form-control align-items-center py-0 focus-shadow-primary focus-border-primary mr-2 price-input-container d-flex">
-                <%= price_form.text_field :amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object), value: number_to_currency(price_form.object.amount, unit: '').strip %>
+                <%= price_form.text_field :amount, class: 'form-control-plaintext px-0', disabled: !can?(:manage, price_form.object), value: price_form.object.amount.present? ? Spree::Money.new(price_form.object.amount, currency: price_form.object.currency, symbol: '').to_s : '' %>
                 <span><%= currency_symbol(price_form.object.currency) %></span>
               </div>
             </td>
